failures/clang_other_error_HsCA4z.i.stderr.txt
src/import/pull-common.c:378:48: error: expected ';' after expression
                        cmd[k++] = "--keyring=" VENDOR_KEYRING_PATH;
                                               ^
                                               ;
src/import/pull-common.c:378:49: error: use of undeclared identifier 'VENDOR_KEYRING_PATH'
                        cmd[k++] = "--keyring=" VENDOR_KEYRING_PATH;
                                                ^
2 errors generated.
